...

        final user = snapshot.data;
        final isAdmin = _isAdmin(user);

        return Scaffold(
          appBar: AppBar(
            title: const Text('Panel Principal'),
          ),
          body: Center(
            child: Padding(
              padding: const EdgeInsets.all(24.0),
              child: SingleChildScrollView(
                child: Column(
...
